force-app/main/default/objects/Supporting_Document_Folder__c/Supporting_Document_Folder__c.object-meta.xml
<CustomObject>
    <label>Supporting Document Folder</label>
    <nameField>
        <label>Supporting Document Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supporting Document Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>