force-app/main/default/objects/Supporting_Document_Folder__c/fields/Allocation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocation Schedule</label>
    <referenceTo>Schedule_Z__c</referenceTo>
    <relationshipLabel>Supporting Document Folders</relationshipLabel>
    <relationshipName>Supporting_Document_Folders</relationshipName>
    <type>Lookup</type>
</CustomField>