force-app/main/default/objects/Supporting_Document_Folder__c/fields/Assignment_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment Agreement</label>
    <lookupFilter>
        
            <active>true</active>
        
            <errorMessage>Supporting Document Folder must be related to a Client Assignment Agreement contract type</errorMessage>
        
            <filterItems>
            
                <field>Contract.RecordTypeId</field>
            
                <operation>equals</operation>
            
                <value>Assignment Agreement</value>
            
            </filterItems>
        
            <isOptional>false</isOptional>
        
        </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Supporting Document Folders</relationshipLabel>
    <relationshipName>Supporting_Document_Folders</relationshipName>
    <type>Lookup</type>
</CustomField>