force-app/main/default/objects/Supporting_Document_Folder__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Agreements</fullName>
            </value>
            <value>
                <fullName>Customer Disclosure Forms</fullName>
            </value>
            <value>
                <fullName>Customer Credit Reports</fullName>
            </value>
            <value>
                <fullName>Customer Addendums</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>